After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 757854 - gl: Recent texture target changes break negotiation in glcolorconvert and gtkglsink
gl: Recent texture target changes break negotiation in glcolorconvert and gtk...
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
git master
Other Linux
: Normal normal
: 1.6.2
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2015-11-09 20:54 UTC by Vivia Nikolaidou
Modified: 2015-11-10 06:01 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Log file from failure (1.22 MB, application/x-xz)
2015-11-09 20:54 UTC, Vivia Nikolaidou
Details

Description Vivia Nikolaidou 2015-11-09 20:54:42 UTC
Created attachment 315154 [details]
Log file from failure

Sorry for the title, feel free to edit :)

Basically the error is:

0:00:01.087001067 31484 0x7f0cc43e5280 WARN           basetransform gstbasetransform.c:1414:gst_base_transform_setcaps:<glcolorconvertelement0> transform could not transform video/x-raw(memory:GLMemory, meta:GstVideoOverlayComposition), format=(string)I420, width=(int)2048, height=(int)872, interlace-mode=(string)progressive, pixel-aspect-ratio=(fraction)1/1, chroma-site=(string)mpeg2, colorimetry=(string)bt709, framerate=(fraction)24/1, texture-target=(string)2D in anything we support

Can be reproduced with ./gtk-play sintel-2048-stereo.mp4
File can be found at one of many locations in https://durian.blender.org/wp-content/content/download.html

Log attached.
Comment 1 Vivia Nikolaidou 2015-11-09 20:56:43 UTC
Title edited.
Comment 2 Matthew Waters (ystreet00) 2015-11-10 06:01:00 UTC
Thanks!

commit eb4e2de4e87d9029416ae919a5a392f912026df6
Author: Matthew Waters <matthew@centricular.com>
Date:   Tue Nov 10 12:32:39 2015 +1100

    gtk: add the overlaycomposition feature to the template caps
    
    There is a possibility that the _get_caps impl will be called with the
    feature in the filter caps which when interecting with the template,
    will return EMPTY and therefore fail negotiation.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=757854

and 1.6 3f6fa591cb685362dc8141ab4cc54b4f9466ad99